--- a/manifest.json
+++ b/manifest.json
@@ -303,6 +303,39 @@
 				],
 				"refer": [],
 				"priority": 0
+			},
+			"discover.html": {
+				"resources": [
+					"image/friends.png",
+					"css/mui.min.css",
+					"image/scanscan.png",
+					"image/addfriends.png"
+				],
+				"refer": [
+					"searchFriends.html"
+				],
+				"priority": 0
+			},
+			"searchFriends.html": {
+				"resources": [
+					"css/mui.min.css",
+					"css/header.css",
+					"js/app.js",
+					"js/mui.min.js",
+					"fonts/mui.ttf"
+				],
+				"refer": [
+					"searchFriendsResult.html"
+				],
+				"priority": 0
+			},
+			"searchFriendsResult.html": {
+				"resources": [
+					"js/mui.js",
+					"css/mui.css"
+				],
+				"refer": [],
+				"priority": 0
 			}
 		},
 		"idle": {
