--- a/manifest.json
+++ b/manifest.json
@@ -211,7 +211,9 @@
 				"resources": [
 					"css/mui.min.css"
 				],
-				"refer": [],
+				"refer": [
+					"chatting.html"
+				],
 				"priority": 0
 			},
 			"login.html": {
